# quantumpulse

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  index.html  install.sh
.cache/clangd/index/: main.cpp.2300763D8008EAC8.idx  quantumpulse-cli.cpp.A676DD12833BFC6A.idx  quantumpulse-miner.cpp.551A0DAB971F74B3.idx  quantumpulse_ai_v7.h.14AA7C5173F396BE.idx  quantumpulse_blockchain_v7.h.333774C360C0CD8F.idx  quantumpulse_crypto_v7.h.A02B7E1DC73B1FCA.idx  quantumpulse_logging_v7.h.D0FBFFA7BD398F31.idx  quantumpulse_mining_v7.h.DA296D548DF407A5.idx  quantumpulse_network_v7.h.4F009F788088B3F7.idx  quantumpulse_sharding_v7.h.52994C62567607FD.idx  quantumpulse_upgrades_v7.h.116F605341594333.idx  quantumpulse_wallet_cli.cpp.5C8DB092F5F72B70.idx  quantumpulse_wallet_v7.h.EF1C6749350891E0.idx  quantumpulsed.cpp.02365DD76F0927DD.idx  test_blockchain_v7.cpp.502EF109031F1D4C.idx
.github/workflows/: ci-cd.yml
bots/: discord-bot.js  telegram-bot.js
config/: quantumpulse_config_v7.json
desktop/: main.js  package.json
docs/: WHITEPAPER.md  index.html  swagger.json
explorer/: index.html
extension/: manifest.json  popup.html  popup.js
include/: quantumpulse_2fa_v7.h  quantumpulse_ai_v7.h  quantumpulse_api_v7.h  quantumpulse_atomic_swap_v7.h  quantumpulse_audit_v7.h  quantumpulse_blockchain_v7.h  quantumpulse_bridge_v7.h  quantumpulse_cache_v7.h  quantumpulse_crypto_v7.h  quantumpulse_cuda_v7.h  quantumpulse_database_v7.h  quantumpulse_defi_v7.h  quantumpulse_erc20_v7.h  quantumpulse_exchange_v7.h  quantumpulse_fraud_v7.h  quantumpulse_gas_v7.h  quantumpulse_governance_v7.h  quantumpulse_hdwallet_v7.h  quantumpulse_insurance_v7.h  quantumpulse_launchpad_v7.h  quantumpulse_lightning_v7.h  quantumpulse_logging_v7.h  quantumpulse_mempool_v7.h  quantumpulse_merkle_v7.h  quantumpulse_metrics_v7.h  quantumpulse_military_security_v7.h  quantumpulse_mining_v7.h  quantumpulse_network_v7.h  quantumpulse_nft_v7.h  quantumpulse_orderbook_v7.h  quantumpulse_p2p_protocol_v7.h  quantumpulse_payment_v7.h  quantumpulse_portfolio_v7.h  quantumpulse_pqcrypto_v7.h  quantumpulse_privacy_v7.h  quantumpulse_ratelimit_v7.h  quantumpulse_security_v7.h  quantumpulse_sharding_v7.h  quantumpulse_smartcontract_v7.h  quantumpulse_staking_v7.h  (+4 more)
k8s/: config.yaml  deployment.yaml
marketing/: SOCIAL_MEDIA_TEMPLATES.md
mobile/: App.js  app.json  package-lock.json  package.json
mobile/src/components/: QRCode.js
mobile/src/services/: biometric.js  notifications.js
monitoring/: docker-compose.yml  grafana-dashboard.json  prometheus.yml
scripts/: build.sh  deploy.sh  deploy_all.sh  generate_certs.sh  maintenance.sh  run_tests.sh  security_audit.sh
src/: main.cpp  qp-wallet.cpp  quantumpulse-cli.cpp  quantumpulse-miner.cpp  quantumpulse_ai_v7.cpp  quantumpulse_blockchain_v7.cpp  quantumpulse_crypto_v7.cpp  quantumpulse_logging_v7.cpp  quantumpulse_mining_v7.cpp  quantumpulse_network_v7.cpp  quantumpulse_sharding_v7.cpp  quantumpulse_upgrades_v7.cpp  quantumpulse_wallet_cli.cpp  quantumpulsed.cpp
terraform/: main.tf
tests/: test_blockchain_v7.cpp  test_security_v7.cpp
web/: index.html  package-lock.json  package.json
web/src/: App.jsx  index.css
website/: index.html
